@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-14T08:26:55Z",
+  "timestamp" : "2022-05-14T16:30:49Z",
   "count_outdated" : 199,
   "uniques_outdated" : 40,
-  "count" : 219,
+  "count" : 220,
   "uniques" : 46,
   "views" : [
     {
@@ -42,8 +42,8 @@
     },
     {
       "timestamp": "2022-05-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
