@@ -1,5 +1,5 @@
 {
-  "count": 20,
+  "count": 21,
   "uniques": 1,
   "views": [
     {
@@ -29,7 +29,7 @@
     },
     {
       "timestamp": "2022-05-14T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
